[package]
name = "rust-prometheus-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
dotenv = "0.15.0"
fs_extra = "1.2.0"
lazy_static = "1.4.0"
prometheus = "0.13.3"
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
tokio = { version = "1.22.0", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
yaml-rust = "0.4.5"
